WIP on tcp server

--- a/html/404.html
+++ b/html/404.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Hello!</title>
-    <style>
-      h1 {
-        color: red;
-      }
-    </style>
   </head>
-
   <body>
-    <h1>Hello!</h1>
-    <p>Hi from Rust</p>
+    <h1>Oops!</h1>
+    <p>Sorry, I don't know what you're asking for.</p>
   </body>
 </html>
