--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,6 @@
     <p>I'm from Rust</p>
 
     <button id="myButton">Click Me</button>
-    <script src="./action.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
