--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playing with rust tcp server</title>
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <h1>Hi</h1>
     <p>I'm from Rust</p>
 
     <button id="myButton">Click Me</button>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
