--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,12 @@
   <body>
     <h1>Hi</h1>
     <p>I'm from Rust</p>
+    <img
+      src="./assets/image.png"
+      alt="the test image over rust"
+      width="100px"
+      height="100px"
+    />
 
     <button id="myButton">Click Me</button>
     <script src="./js/app.js"></script>
