--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,9 @@
       height="100px"
     />
 
-    <button id="myButton">Click Me</button>
+    <div class="container">
+      <button class="random-button" id="randomButton">Catch Me!</button>
+    </div>
     <script src="./js/app.js"></script>
   </body>
 </html>
