WIP on tcp_server js

--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
     <div class="container">
       <button class="random-button" id="randomButton">Catch Me!</button>
     </div>
+    <a href="./three.html">Three js</a>
     <script src="./js/app.js"></script>
   </body>
 </html>
