WIP on tcp_server js

--- a/html/404.html
+++ b/html/404.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hello!</title>
+    <title>404!</title>
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body>
-    <h1>Oops!</h1>
-    <p>Sorry, I don't know what you're asking for.</p>
+  <body id="_body">
+    <img src="./assets/404.png" alt="404" class="img-fluid" />
   </body>
 </html>
