--- a/html/index.html
+++ b/html/index.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <h1>Hi</h1>
-    <p>I'm from Rust</p>
-    <img
-      src="./assets/image.png"
-      alt="the test image over rust"
-      width="100px"
-      height="100px"
-    />
+    <div class="wrapper">
+      <div class="card">
+        <div class="card-content">
+          <h2>This is a Rust TCP Server</h2>
+          <p>
+            I can render image, CSS, and JS. You know Rust has a steep learning
+            curve, but stay proactive, don’t hesitate, follow the Rust
+            documentation, and become awesome—and much more!
+          </p>
+        </div>
+      </div>
 
-    <div class="container">
-      <button class="random-button" id="randomButton">Catch Me!</button>
+      <div class="container">
+        <button class="random-button" id="randomButton">Catch Me!</button>
+      </div>
     </div>
     <a href="./three.html">Three js</a>
     <script src="./js/app.js"></script>
